<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:layout_marginLeft="8dp"
    android:orientation="vertical"
    tools:context=".ConstantSettings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Settings"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="177dp" />

    <TextView
        android:id="@+id/firstname_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/firstName"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="23dp" />

    <EditText
        android:id="@+id/firstname_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:hint="@string/hintFirstName"
        android:maxLength="10"
        android:maxLines="1"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/lastname_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lastName"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="115dp" />

    <EditText
        android:id="@+id/lastname_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:hint="@string/hintLastName"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/gender"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="202dp" />

    <RadioGroup
        android:id="@+id/myGender_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelectGender"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelectGender"
            android:text="@string/female"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="233dp" />

        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelectGender"
            android:text="@string/other" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/birthday" />

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/hintBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/letsStart"
        android:textColor="@color/white" />

</LinearLayout>