<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".Settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/goToChat_btn"
                android:layout_marginTop="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="330dp"
                android:background="@drawable/message" />

            <TextView
                android:id="@+id/titleMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wantedGender_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lookingForGender"
                android:textSize="14dp" />

            <RadioGroup
                android:id="@+id/radioGroup_wantedGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/wantedMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelectWantedGender"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/wantedFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelectWantedGender"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/wantedOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelectWantedGender"
                    android:text="@string/other" />

                <RadioButton
                    android:id="@+id/wantedFlexible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelectWantedGender"
                    android:text="@string/noPreferences" />

            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtT"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose An Age Range:" />

                <TextView
                    android:id="@+id/min"
                    android:text="18 - 100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="280dp" />


            </RelativeLayout>


            <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:id="@+id/SeekBarRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                rsb:absoluteMaxValue="18"
                rsb:absoluteMinValue="100" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="337dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:max="19"
                android:min="0"
                android:progress="1"
                android:thumb="@drawable/thumb_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/hobbies" />

            <com.example.a1stapp.MultiSelectSpinner
                android:id="@+id/mSpinner"
                android:layout_width="274dp"
                android:layout_height="match_parent"
                android:layout_gravity="left" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button"
                android:text="@string/moveToMap"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
